Added column for Anchor Key. Refactored AnchorService.:

--- a/Sharing/SharingServiceSample/appsettings.json
+++ b/Sharing/SharingServiceSample/appsettings.json
@@ -7,7 +7,7 @@
   "AllowedHosts": "*",
   "StorageConnectionString": "",
   "Persistence": {
-    "Provider": "Cosmos",
+    "Provider": "Sqlite",
     "ConnectionString": "Filename=./storage-service.db",
     "DatabseName": "",
     "AccessKey": ""
