--- a/Sharing/SharingService.Web.Core/SharingService.Web.Core.csproj
+++ b/Sharing/SharingService.Web.Core/SharingService.Web.Core.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharingService.Core\SharingService.Core.csproj" />
+    <ProjectReference Include="..\SharingService.Data\SharingService.Data.csproj" />
+  </ItemGroup>
+
 </Project>
