--- a/Unity/.gitignore
+++ b/Unity/.gitignore
@@ -55,3 +55,6 @@ Assets/StreamingAssets/crashlytics-build.properties
 
 
 # End of https://www.gitignore.io/api/unity
+
+# Mixed reality toolkit
+Assets/Dependencies/MixedRealityToolkit*
