Upgraded Server to also allow listing of anchors. Fixed project.

--- a/Sharing/SharingServiceSample/SharingService.csproj
+++ b/Sharing/SharingServiceSample/SharingService.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <None Update="storage-service.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
